--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,10 +13,10 @@
 <body class="d-flex text-center text-white bg-dark">
     <div class=" cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
-            <h3 class="float-md-start mb-0">YelpCamp</h3>
+            <h3 class="float-md-start mb-0">Property home</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" href="">home</a>
-                <a class="nav-link" href="/campgrounds">campgrounds</a>
+                <a class="nav-link" href="/campgrounds">Property</a>
                 <% if(!currentUser){ %>
                 <a class="nav-link" href="/register">Register</a>
                 <a class="nav-link" href="/login">Login</a>
@@ -27,13 +27,13 @@
         </header>
 
         <main class="px-3">
-            <h1>YelpCamp</h1>
-            <p class="lead"> Welcome back to YelpCamp <br> </p>
-            <a class="btn btn-secondary btn-lg font-weight-bold  bg-white" href="/campgrounds">View campgrounds</a>
+            <h1>Property</h1>
+            <p class="lead"> Welcome back to Property <br> </p>
+            <a class="btn btn-secondary btn-lg font-weight-bold  bg-white" href="/campgrounds">View Propertys</a>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2022 YelpCamp, Inc</p>
+            <p>&copy; 2022 Property, Inc</p>
         </footer>
 
     </div>
