--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -15,6 +15,10 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email">
                 </div>
                 <div class="form-group mb-3">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="phoneNumber">
+                </div>
+                <div class="form-group mb-3">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                 </div>
