--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
+      <a class="navbar-brand" href="/Property">Property</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,8 +8,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="/campgrounds">Campgrounds</a>
-          <a class="nav-link" href="campgrounds/new">new campgrounds</a>
+          <a class="nav-link" href="/property">property</a>
+          <a class="nav-link" href="property/new">new property</a>
         </div>
         <div class="navbar-nav  ms-auto">
           <% if(!currentUser){  %> 
