--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="footer bg-dark py-2 mt-auto">
+<footer class="footer bg-dark py-2 mt-2">
     <div class="container">
-        <span class = "text-muted"> &copy; YelpCamp 2022</span>
+        <span class = "text-muted"> &copy; Property 2022</span>
     </div>
 </footer>
