--- a/views/property/new.ejs
+++ b/views/property/new.ejs
@@ -2,7 +2,6 @@
 
 <div class="row">
 
-    <h1 class="text-center"> new campground </h1>
 <div class="col-sm-6 offset-sm-3">
     <form class="needs-validation" action="/campgrounds" method="POST" novalidate enctype="multipart/form-data" >
         <div class="mb-3">
@@ -29,8 +28,8 @@
         <label class="form-label" for="description">description:</label>
             <textarea class="form-control" id="description" type="text" name="campground[description]" placeholder="description" required></textarea>
         </div>
-        <div class="d-grid gap-2">
-        <input class="btn btn-success mx-auto" type="submit" value="Add campground">
+        <div class="d-grid gap-2 mb-10">
+        <input class="btn btn-success mx-auto" type="submit" value="Add property">
         </div>
     </form>
 </div>
