--- a/views/property/new.ejs
+++ b/views/property/new.ejs
@@ -3,14 +3,42 @@
 <div class="row">
 
 <div class="col-sm-6 offset-sm-3">
-    <form class="needs-validation" action="/campgrounds" method="POST" novalidate enctype="multipart/form-data" >
+    <form class="needs-validation" action="/property" method="POST" novalidate enctype="multipart/form-data" >
         <div class="mb-3">
             <label class="form-label" for="title">Name:</label>
-            <input class="form-control" id="title" type="text" name="campground[title]" placeholder="title" required>
+            <input class="form-control" id="title" type="text" name="property[title]" placeholder="title" required>
         </div>
         <div class="mb-3">
             <label class="form-label" for="location">location:</label>
-            <input class="form-control" id="location" type="text" name="campground[location]" placeholder="location" required>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="location">location:</label>
+            <input class="form-control" id="location" type="text" name="property[sellingType]" placeholder="location" required>
         </div>
         <div class="mb-3 custom-file">
             <label class="form-label" for="image"> uplode images :</label>
@@ -21,7 +49,7 @@
             <label class="form-label" for="price">price:</label>
             <div class="input-group ">
                 <span class="input-group-text" id="price-label">$</span>
-                <input id="price" type="text" class="form-control" name="campground[price]" placeholder="0.00" aria-label="price" aria-describedby="price-label" required>
+                <input id="price" type="text" class="form-control" name="property[price]" placeholder="0.00" aria-label="price" aria-describedby="price-label" required>
               </div>
         </div>
         <div class="mb-3">
