--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark py-2 mt-2">
+<footer class="footer bg-dark py-2 mt-auto">
     <div class="container">
         <span class = "text-muted"> &copy; Property 2022</span>
     </div>
