--- a/views/property/new.ejs
+++ b/views/property/new.ejs
@@ -42,7 +42,7 @@
           class="form-control"
           id="propertyType"
           type="text"
-          name="property[sellingType]"
+          name="property[propertyType]"
           placeholder="Property Type"
           required
         />
