--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
             <h3 class="float-md-start mb-0">Property home</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" href="">home</a>
-                <a class="nav-link" href="/campgrounds">Property</a>
+                <a class="nav-link" href="/property">Property</a>
                 <% if(!currentUser){ %>
                 <a class="nav-link" href="/register">Register</a>
                 <a class="nav-link" href="/login">Login</a>
@@ -29,7 +29,7 @@
         <main class="px-3">
             <h1>Property</h1>
             <p class="lead"> Welcome back to Property <br> </p>
-            <a class="btn btn-secondary btn-lg font-weight-bold  bg-white" href="/campgrounds">View Propertys</a>
+            <a class="btn btn-secondary btn-lg font-weight-bold  bg-white" href="/property">View Propertys</a>
         </main>
 
         <footer class="mt-auto text-white-50">
