--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -9,7 +9,7 @@
         <div class="navbar-nav">
           <a class="nav-link" href="/">Home</a>
           <a class="nav-link" href="/property">property</a>
-          <a class="nav-link" href="property/new">new property</a>
+          <a class="nav-link" href="/property/new">new property</a>
         </div>
         <div class="navbar-nav  ms-auto">
           <% if(!currentUser){  %> 
