--- a/views/property/show.ejs
+++ b/views/property/show.ejs
@@ -1,18 +1,18 @@
 <% layout('layouts/boilerplate'); %>
 
-<link rel="stylesheet" href="/styles/stars.css" />
+<link rel="stylesheet" href="/styles/show.css" />
 
 <div class="row">
-  <div class="col-6">
+  <div class="col-6 offset-2">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <% campground.images.forEach((img,i) => {%>
+        <% property.images.forEach((img,i) => {%>
         <div class="carousel-item <%= i=== 0 ? 'active': '' %> ">
           <img src="<%= img.url %>" class="d-block w-100" alt="..." />
         </div>
         <% }); %>
       </div>
-      <% if(campground.images.length>1){ %> 
+      <% if(property.images.length>1){ %> 
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -27,79 +27,37 @@
     </div>
     <div class="card mb-2">
       <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %></p>
+        <h5 class="card-title text-center"><%= property.title %></h5>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item text-muted"><%= campground.location %></li>
-        <li class="list-group-item text-muted">
-          created by <%= campground.author.username %>
-        </li>
-        <li class="list-group-item">$<%= campground.price %>/night</li>
+        <div class="list-group-item d-flex flex-wrap justify-content-between mx-2 list-unstyled">
+        <li >SellingType : <%= property.sellingType %></li>
+        <li>PropertyType :<%= property.propertyType %></li>
+        </div>
+        <div class="list-group-item d-flex justify-content-between flex-wrap mx-2 list-unstyled">
+          <li class="">PropertySize : <%= property.propertySize %></li>
+          <li>Rooms : <%= property.rooms %></li>
+          </div>
+          <% if(property.sellingType === "rent"){%> 
+          <div class="list-group-item d-flex justify-content-between mx-2 list-unstyled">
+            <li class="">rentType : <%= property.rentType %></li>
+            </div>
+            <% } %> 
+        <p class=" m-2 text-center"> - description -</p>
+        <p class="m-2"><%= property.description %></p>
+
       </ul>
-      <% if(currentUser && campground.author.equals(currentUser._id)) {%>
-      <div class="card-body">
-        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">edit</a>
-        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+      <li class="list-group-item text-muted text-center border-1">
+        created by <%= property.agent.username %>
+      </li>
+      <% if(currentUser && property.agent.equals(currentUser._id)) {%>
+      <div class="card-body d-inline">
+        <a href="/property/id/<%= property._id %>/edit" class="card-link btn btn-info">edit</a>
+        <form class="d-inline" action="/property/id/<%= property._id %>?_method=DELETE" method="POST">
           <input class="btn btn-danger" type="submit" value="delete" />
         </form>
       </div>
       <% } %>
     </div>
   </div>
-  <div class="col-6">
-    <div id='map' style='width: 400px; height: 300px;'></div>
-    <% if(currentUser){ %>
-      <br>
-    <h3>leave a Review</h3>
-    <form class="mb-3 needs-validation" action="/campgrounds/<%= campground._id %>/reviews" method="POST" novalidate>
-      <fieldset class="starability-basic mt-4">
-        <input type="radio" id="no-rate" class="input-no-rate" name="Review[rating]" value="0" checked
-          aria-label="No rating." />
-        <input type="radio" id="first-rate1" name="Review[rating]" value="1" />
-        <label for="first-rate1" title="Terrible">1 star</label>
-        <input type="radio" id="first-rate2" name="Review[rating]" value="2" />
-        <label for="first-rate2" title="Not good">2 stars</label>
-        <input type="radio" id="first-rate3" name="Review[rating]" value="3" />
-        <label for="first-rate3" title="Average">3 stars</label>
-        <input type="radio" id="first-rate4" name="Review[rating]" value="4" />
-        <label for="first-rate4" title="Very good">4 stars</label>
-        <input type="radio" id="first-rate5" name="Review[rating]" value="5" />
-        <label for="first-rate5" title="Amazing">5 stars</label>
-      </fieldset>
-      <div class="mb-3">
-        <label class="form-label" for="body">Comment</label>
-        <textarea class="form-control" id="body" rows="3" name="Review[body]" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <h3>Reviews</h3>
-    <% for (let i = campground.reviews.length - 1; i >= 0; i--) { %>
-    <div class="card mb-2">
-      <div class="card-body">
-        <p class="starability-result" data-rating="<%= campground.reviews[i].rating %>">
-          Rated: <%= campground.reviews[i].rating %> stars
-        </p>
-        <hr />
-        <p class="card-text"><%= campground.reviews[i].body %></p>
-        <footer class="blockquote-footer m-0">
-          created by
-          <cite title="Source Title"><%= campground.reviews[i].author.username %></cite>
-        </footer>
-        <% if(currentUser &&
-        campground.reviews[i].author.equals(currentUser._id)){%>
-        <hr />
-        <form action="/campgrounds/<%= campground._id %>/reviews/<%= campground.reviews[i]._id %>?_method=DELETE"
-          method="POST">
-          <input class="btn btn-danger" type="submit" value="delete" />
-        </form>
-        <% } %>
-      </div>
-    </div>
-    <% } %> <% } %>
-  </div>
 </div>
-<script>
-  const campground = <%-JSON.stringify(campground) %>;
-  </script>
-<script src="/js/showPageMap.js"></script>
