--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -7,8 +7,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/">Home</a>
-          <a class="nav-link" href="/property">property</a>
+          <a class="nav-link" href="/property">Home</a>
+          <a class="nav-link" href="/property/sell">buy</a>
+          <a class="nav-link" href="/property/rent">rent</a>
           <a class="nav-link" href="/property/new">new property</a>
         </div>
         <div class="navbar-nav  ms-auto">
