--- a/views/property/show.ejs
+++ b/views/property/show.ejs
@@ -2,13 +2,13 @@
 
 <link rel="stylesheet" href="/styles/show.css" />
 
-<div class="row">
-  <div class="col-6 offset-2">
+<div class="row maxWidth">
+  <div class="col">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <% property.images.forEach((img,i) => {%>
         <div class="carousel-item <%= i=== 0 ? 'active': '' %> ">
-          <img src="<%= img.url %>" class="d-block w-100" alt="..." />
+          <img src="<%= img.url %>" id="img" class=" w-100" alt="..." />
         </div>
         <% }); %>
       </div>
@@ -47,11 +47,11 @@
         <p class="m-2"><%= property.description %></p>
 
       </ul>
-      <li class="list-group-item text-muted text-center border-1">
+      <li class="list-group-item text-muted text-end border-0 mt-3 name">
         created by <%= property.agent.username %>
       </li>
       <% if(currentUser && property.agent.equals(currentUser._id)) {%>
-      <div class="card-body d-inline">
+      <div class="card-body d-inline index">
         <a href="/property/id/<%= property._id %>/edit" class="card-link btn btn-info">edit</a>
         <form class="d-inline" action="/property/id/<%= property._id %>?_method=DELETE" method="POST">
           <input class="btn btn-danger" type="submit" value="delete" />
