--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -8,9 +8,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/property">Home</a>
-          <a class="nav-link" href="/property/sell">buy</a>
-          <a class="nav-link" href="/property/rent">rent</a>
-          <a class="nav-link" href="/property/new">new property</a>
+          <a class="nav-link" href="/property/sell">Buy</a>
+          <a class="nav-link" href="/property/rent">Rent</a>
+          <a class="nav-link" href="/property/new">New Property</a>
         </div>
         <div class="navbar-nav  ms-auto">
           <% if(!currentUser){  %> 
