--- a/views/property/show.ejs
+++ b/views/property/show.ejs
@@ -40,7 +40,8 @@
           </div>
           <% if(property.sellingType === "rent"){%> 
           <div class="list-group-item d-flex justify-content-between mx-2 list-unstyled">
-            <li class="">rentType : <%= property.rentType %></li>
+            <li class="">
+              RentType : <%= property.rentType %></li>
             </div>
             <% } %> 
         <p class=" m-2 text-center"> - description -</p>
