--- a/views/property/show.ejs
+++ b/views/property/show.ejs
@@ -45,7 +45,7 @@
             </div>
             <% } %> 
         <p class=" m-2 text-center"> - description -</p>
-        <p class="m-2"><%= property.description %></p>
+        <p class="m-2 lh-lg desc"><%= property.description %></p>
 
       </ul>
       <li class="list-group-item text-muted text-end border-0 mt-3 name">
