--- a/views/property/index.ejs
+++ b/views/property/index.ejs
@@ -25,7 +25,7 @@
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%= property.title %></h5>
-        <p class="card-text mt-5"><%= property.description %></p>
+        <p class="card-text mt-5"><%= property.description.substring(0,100) %></p>
         <p class="card-text mt-5"><small class="text-muted">last Updated: <%= property.updatedAt %></small></p>
         <a class="btn btn-primary mt-1" href="/property/id/<%= property._id %>"
           >more info</a
